# FFMPEG-A

./: .gitignore  Makefile  README.md  ffbuild.sh  settings.gradle  transcript.txt
app/: CMakeLists.txt  build.gradle
app/jni/arm64-v8a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/jni/armeabi-v7a/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/jni/x86/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/jni/x86_64/include/libavutil/: ffversion.h
app/jni/x86_64/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/fantastico_softworks/ffmpeg_a/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeginterface.cpp  hello.c  hello.cpp
app/src/main/java/com/fantastico_softworks/ffmpeg_a/: ChooseFile.kt  MainActivity.kt  SaveVideo.kt  TranscodeActivity.kt
app/src/main/java/com/fantastico_softworks/ffmpeg_a/ui/main/: FragmentSimple.kt  MainViewModel.kt  PageViewModel.kt  PlaceholderFragment.kt  SectionsPagerAdapter.kt
app/src/main/res/layout/: activity_main.xml  fragment_expert.xml  fragment_simple.xml  main_activity.xml
app/src/main/res/menu/: preset_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_settings_bonw.xml  ic_settings_wonb.xml
app/src/main/res/values/: ic_settings_bonw_background.xml  ic_settings_wonb_background.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/fantastico_softworks/ffmpeg_a/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
